...
"Chat Mute Notification"="Mute Notification";
"Chat My Photo Stream"="My Photo Stream";
"Chat Name Card"="Name Card";
"Chat Network connection failed please check network"="Network connection failed, please check network";
"Chat New application"="New application";
...
"Chat Share contact to"="Share %@ to %@";
"Chat Sharelink"="[share link]";
"Chat Sight"="Sight";
"Chat Slide left to cancel"="Slide left to cancel";
"Chat Snapchat"="[Snapchat]";
...
"Chat your bitcoin address received a transfer"="You received a transfer, the amount is:%@";
"Common"="Common type";
"Common Cancel"="Cancel";
"Common Completed"="Completed";
"Common Download App"="Downloading%@";
...
"Common Loading"="Loading ...";
"Common MM dd HH mm"="MM/dd HH:mm";
"Common OK"="OK";
"Common Pull down to refresh"="Pull down to refresh";
"Common Release to refresh"="Release to refresh";
...
"Link Select new owner"="Select new owner";
"Link Selecting  new owner  release your ownership"="Selecting %@ as new owner will release your ownership";
"Link Send"="Send";
"Link Send friend request"="Send friend request";
"Link Send successful"="Send successful";
...
"Login Updated failed"="Updated failed";
"Login User avatar is illegal"="User avatar is illegal";
"Login User name can not be Connect"="User name can't be 'Connect'";
"Login UserName Error"="UserName Error";
"Login Verification code error"="Verification code error";
...
"Set"="Settings";
"Set A phone number can only grab once"="A phone number can only grab once";
"Set About"="About";
"Set Account security"="Account & security";
"Set Add mobile"="Add mobile";
...
"Set Change Pattern"="Change Pattern";
"Set Change password"="Change password";
"Set Check Update"="Check Update";
"Set Copied"="Copied";
"Set Copy"="Copy";
...
"Set Link Mobile"="Bind Mobile";
"Set Load failed please try again later"="Load failed, please try again later";
"Set Log Out"="Log Out";
"Set Log Out Fail"="Exit failed, please check the network";
"Set Logging out"="Logging out...";
...
"Set Off"="Disabled";
"Set On"="On";
"Set Open Source"="Open Source";
"Set Password Hint"="Password Hint:";
"Set Password incorrect you have chance"="Password incorrect, you have %d chance";
...
"Set new version"="Latest version: %@";
"Set or"="Or";
"Set tip title"="Tips";
"Set unlink Connect not find friend your backup deleted"="If unbound your phone, Connect will not able to find any friend from your phone contacts, your backup of private key on the server will be deleted.";
"Set verification code has been send to phone"="A verification code has been send to phone.";
...
"Wallet Prepare Lucky Packet"="Prepare Lucky Packet";
"Wallet Quantity"="Quantity";
"Wallet Receipt"="Request";
"Wallet Receivables from"="Receivables from(%d)";
"Wallet Received"="Received";
...
